Finaliza projeto relogio digital