@@ -1,6 +1,8 @@
 # Relogio Digital com JavaFX
 
-Aplicacao desktop que exibe um relogio digital em tempo real, praticando atualizacao de interface, tempo e componentes visuais em JavaFX.
+Aplicacao desktop simples que exibe um relogio digital em tempo real.
+
+![Demonstracao do Relogio Digital](./assets/relogio-digital.gif)
 
 ## Repositorio
 
@@ -8,30 +10,47 @@ Aplicacao desktop que exibe um relogio digital em tempo real, praticando atualiz
 
 ## Objetivo
 
-Criar um relogio digital funcional, com exibicao de hora atual e atualizacao automatica.
+Criar uma interface grafica com JavaFX que mostra a hora atual e atualiza os segundos continuamente.
 
 ## Conceitos praticados
 
 - JavaFX
-- API de data e hora
-- Atualizacao periodica da interface
-- Layouts e estilização com CSS
-- Organizacao de uma aplicacao desktop simples
+- `LocalDateTime`
+- `DateTimeFormatter`
+- `Timeline`
+- `KeyFrame`
+- `Duration` do JavaFX
+- Atualizacao continua de interface
+- Estilizacao simples com CSS inline
 
-## Funcionalidades planejadas
+## Funcionalidades
 
-- Exibir hora atual
-- Atualizar a cada segundo
-- Exibir data atual
-- Aplicar estilo visual com CSS
-- Opcional: alternar formato 12h/24h
+- Exibe a hora atual no formato `HH:mm:ss`
+- Atualiza a exibicao a cada segundo
+- Usa fundo preto e texto amarelo
+- Mantem a atualizacao enquanto a janela esta aberta
 
 ## Status
 
-Planejado.
+Concluido.
 
-## Evidencias para portfolio
+## Como funciona
 
-- Screenshot da tela
-- Video curto mostrando a atualizacao em tempo real
-- Comentario tecnico sobre uso de tempo e interface grafica
+O relogio usa `LocalDateTime.now()` para obter a hora atual e `DateTimeFormatter` para formatar o texto no padrao `HH:mm:ss`.
+
+A atualizacao continua e feita com uma `Timeline` do JavaFX. Um `KeyFrame` atualiza o texto do rotulo e outro define o intervalo de um segundo.
+
+## Como executar
+
+No PowerShell, com a variavel `PATH_TO_FX` apontando para a pasta `lib` do JavaFX:
+
+```powershell
+javac --module-path "$env:PATH_TO_FX" --add-modules javafx.controls RelogioDigital.java
+java --module-path "$env:PATH_TO_FX" --add-modules javafx.controls RelogioDigital
+```
+
+## Arquivo principal
+
+```txt
+RelogioDigital.java
+```
